# oxyde-cloud

./: Cargo.toml  LICENSE  README.md
design/: logo.afdesign
examples/simple/: Cargo.toml  leptos-cloud.toml
examples/simple/src/: main.rs
leptos-cloud-cli/: Cargo.toml
leptos-cloud-cli/src/: main.rs
leptos-cloud-cli/src/commands/: build.rs  deploy.rs  deploy_config.rs  init.rs  log.rs  login.rs  logout.rs  mod.rs
leptos-cloud-cli/src/commands/init/: app_slug.rs  error.rs  mod.rs  team.rs
leptos-cloud-cli/templates/: github-workflow.yml  leptos-cloud.toml
leptos-cloud-client/: Cargo.toml
leptos-cloud-client/src/: lib.rs
leptos-cloud-common/: Cargo.toml
leptos-cloud-common/src/: config.rs  lib.rs  net.rs
leptos-cloud-deploy/: Cargo.toml
leptos-cloud-deploy/src/: build.rs  deploy.rs  main.rs
leptos-cloud-uploader/: Cargo.toml
leptos-cloud-uploader/src/: deploy.rs
oxyde-cloud-cli/: Cargo.toml  run_local.sh
oxyde-cloud-cli/src/: api_key.rs  lib.rs  main.rs
oxyde-cloud-cli/src/commands/: deploy.rs  deploy_config.rs  log.rs  login.rs  logout.rs  mod.rs
oxyde-cloud-cli/src/commands/init/: app_slug.rs  error.rs  mod.rs  team.rs
oxyde-cloud-cli/templates/: github-workflow.yml  oxyde-cloud.toml
oxyde-cloud-client/: Cargo.toml
oxyde-cloud-client/src/: errors.rs  lib.rs
oxyde-cloud-common/: Cargo.toml
oxyde-cloud-common/src/: config.rs  net.rs
oxyde-cloud-deploy/: Cargo.toml
oxyde-cloud-deploy/src/: build.rs  deploy.rs  lib.rs  main.rs
src/: api_key.rs  config.rs  lib.rs  main.rs
src/client/: errors.rs  mod.rs  models.rs  responses.rs
src/commands/: build.rs  deploy.rs  init.rs  log.rs  login.rs  mod.rs
