[workspace]
resolver = "2"

members = [
    "leptos-cloud-common",
    "leptos-cloud-cli",
    "leptos-cloud-client", "leptos-cloud-uploader",
]

exclude = ["examples"]

default-members = ["leptos-cloud-cli"]

[workspace.dependencies]
leptos-cloud-common = { path = "./leptos-cloud-common", version = "0.1.0" }
leptos-cloud-client = { path = "./leptos-cloud-client", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
