[workspace]
resolver = "2"

members = [
    "oxyde-cloud-common",
    "oxyde-cloud-cli",
    "oxyde-cloud-client",
    "oxyde-cloud-deploy",
]

exclude = ["examples"]

default-members = ["oxyde-cloud-cli"]

[workspace.dependencies]
oxyde-cloud-common = { path = "./oxyde-cloud-common", version = "0.1.0" }
oxyde-cloud-client = { path = "./oxyde-cloud-client", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
