[workspace]
resolver = "2"

members = [
  "oxyde-cloud-common",
  "oxyde-cloud-cli",
  "oxyde-cloud-client",
  "oxyde-cloud-deploy",
]

exclude = ["examples"]

default-members = ["oxyde-cloud-cli"]

[workspace.dependencies]
cargo-leptos = "0.2"
oxyde-cloud-common = { path = "./oxyde-cloud-common", version = "0.4" }
oxyde-cloud-client = { path = "./oxyde-cloud-client", version = "0.4" }
oxyde-cloud-deploy = { path = "./oxyde-cloud-deploy", version = "0.4" }
serde = { version = "1", features = ["derive"] }
toml = "0.9"
