[package]
name = "leptos-cloud-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "leco"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.18", features = ["derive", "env"] }
cliclack = "0.3.5"
heck = "0.5.0"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
lazy_static = "1.5.0"
leptos-cloud-client.workspace = true
leptos-cloud-common.workspace = true
log = "0.4.22"
simple_logger = "5"
tera = { version = "1.20", default-features = false }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.19"
