[package]
name = "oxyde-cloud-cli"
version = "0.3.7"
edition = "2024"
authors = ["Marc-Stefan Cassola"]
categories = ["gui", "web-programming", "wasm"]
description = "CLI for the Oxyde Cloud"
keywords = ["oxyde", "leptos", "cloud", "deploy", "cli"]
license = "MIT"
repository = "https://github.com/Synphonyte/oxyde-cloud"
homepage = "https://oxyde.cloud"

[[bin]]
name = "oxy"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
cliclack = "0.3"
heck = "0.5"
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
] }
lazy_static = "1.5"
oxyde-cloud-client.workspace = true
oxyde-cloud-common.workspace = true
log = "0.4"
simple_logger = "5"
tera = { version = "1.20", default-features = false }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
