[package]
name = "oxyde-cloud-client"
version = "0.1.0"
edition = "2021"

[dependencies]
headers-core = "0.3"
http = "1"
oxyde-cloud-common.workspace = true
log = "0.4.22"
reqwest = { version = "0.12.8", features = ["stream", "multipart", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.63"
tokio-util = "0.7.12"
tokio = "1.40.0"
serde_json = "1.0.128"