[package]
name = "oxyde-cloud-client"
version = "0.4.2"
edition = "2024"
authors = ["Marc-Stefan Cassola"]
categories = ["gui", "web-programming", "wasm"]
description = "Client SDK for the Oxyde Cloud API"
keywords = ["oxyde", "leptos", "utilities", "cloud", "deploy"]
license = "MIT"
repository = "https://github.com/Synphonyte/oxyde-cloud"
homepage = "https://oxyde.cloud"

[dependencies]
headers-core = "0.3"
http = "1"
oxyde-cloud-common.workspace = true
log = "0.4"
reqwest = { version = "0.12", features = ["stream", "multipart", "json"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
tokio-util = "0.7"
tokio = "1"
serde_json = "1"
