[package]
name = "oxyde-cloud-common"
version = "0.2.0"
edition = "2024"
authors = ["Marc-Stefan Cassola"]
categories = ["gui", "web-programming", "wasm"]
description = "Shared code for the oxyde-cloud crates"
keywords = ["oxyde", "leptos", "utilities", "cloud", "deploy"]
license = "MIT"
repository = "https://github.com/Synphonyte/oxyde-cloud"
homepage = "https://oxyde.cloud"


[dependencies]
headers-core = "0.3"
leptos_config = "0.7"
serde.workspace = true
thiserror = "2"
toml = "0.8"
