[package]
name = "oxyde-cloud-common"
version = "0.5.0"
edition = "2024"
categories = ["gui", "web-programming", "wasm"]
description = "Shared code for the oxyde-cloud crates"
keywords = ["oxyde", "leptos", "utilities", "cloud", "deploy"]
license = "MIT"
repository = "https://github.com/Synphonyte/oxyde-cloud"
homepage = "https://oxyde.cloud"


[dependencies]
headers-core = "0.3"
leptos_config = "0.8"
serde.workspace = true
anyhow = "1"
toml.workspace = true
