[package]
name = "oxyde-cloud-deploy"
version = "0.1.0"
edition = "2021"
authors = ["Marc-Stefan Cassola"]
categories = ["gui", "web-programming", "wasm"]
description = "CLI for deploying the Oxyde Cloud API"
keywords = ["oxyde", "leptos", "utilities", "cloud", "deploy"]
license = "MIT"
repository = "https://github.com/Synphonyte/oxyde-cloud"
homepage = "https://oxyde.cloud"

[lib]

[dependencies]
anyhow = "1.0.93"
cargo-leptos = "0.2.21"
clap = { version = "4.5.19", features = ["derive"] }
oxyde-cloud-client.workspace = true
oxyde-cloud-common.workspace = true
log = "0.4.22"
reqwest = "0.12.9"
thiserror = "2.0.3"
tokio = "1.40.0"
walkdir = "2.5.0"
