[package]
name = "oxyde-cloud-deploy"
version = "0.2.2"
edition = "2024"
authors = ["Marc-Stefan Cassola"]
categories = ["gui", "web-programming", "wasm"]
description = "CLI for deploying the Oxyde Cloud API"
keywords = ["oxyde", "leptos", "utilities", "cloud", "deploy"]
license = "MIT"
repository = "https://github.com/Synphonyte/oxyde-cloud"
homepage = "https://oxyde.cloud"

[lib]

[dependencies]
anyhow = "1"
cargo-leptos = "=0.2.32"
clap = { version = "4.5", features = ["derive"] }
oxyde-cloud-client.workspace = true
oxyde-cloud-common.workspace = true
log = "0.4"
reqwest = "0.12"
thiserror = "2"
tokio = "1"
walkdir = "2.5"
